--- a/ClientApp/src/app/shared/roles/roles.component.html
+++ b/ClientApp/src/app/shared/roles/roles.component.html
@@ -1,5 +1,17 @@
 <div class="roles-section">
   <h2>Roles</h2>
+
+  <div class="search-container">
+    <label for="search">Buscar Rol por Nombre:</label>
+    <input
+      type="text"
+      id="search"
+      placeholder="Escribe para buscar..."
+      [(ngModel)]="searchTerm"
+      (ngModelChange)="filtrarRoles()"
+    />
+  </div>
+
   <div class="table-container">
     <table class="table">
       <thead>
@@ -26,10 +38,22 @@
     <h3>Actualizar Rol</h3>
     <form (ngSubmit)="actualizarRol()">
       <label for="idRol">ID Rol:</label>
-      <input type="number" id="idRol" [(ngModel)]="rolParaActualizar.IdRol" name="idRol" disabled>
+      <input
+        type="number"
+        id="idRol"
+        [(ngModel)]="rolParaActualizar.IdRol"
+        name="idRol"
+        disabled
+      />
       <label for="nombreRol">Nombre Rol:</label>
-      <input type="text" id="nombreRol" [(ngModel)]="rolParaActualizar.NombreRol" name="nombreRol">
+      <input
+        type="text"
+        id="nombreRol"
+        [(ngModel)]="rolParaActualizar.NombreRol"
+        name="nombreRol"
+      />
       <button type="submit">Guardar</button>
+      <button type="button" (click)="descartarCambios()">Descartar</button>
     </form>
   </div>
 
@@ -37,7 +61,12 @@
     <h3>Agregar Rol</h3>
     <form (ngSubmit)="agregarRol()">
       <label for="nombreRol">Nombre Rol:</label>
-      <input type="text" id="nombreRol" [(ngModel)]="nuevoRol.NombreRol" name="nombreRol">
+      <input
+        type="text"
+        id="nombreRol"
+        [(ngModel)]="nuevoRol.NombreRol"
+        name="nombreRol"
+      />
       <button type="submit">Agregar</button>
     </form>
   </div>
